tests/NormalTests/paczka1/small_fuzzy/57710354.err
Error in line 6: MdRQw8Df A505 38,0
Error in line 4: pTiTWor A300 72,2
Error in line 7: MdRQw8Df S446 83,4
